<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".ui.activity.SearchActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/sv_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim_8dp"
                android:background="@drawable/search"
                android:imeOptions="actionSearch|flagNoExtractUi"
                android:theme="@style/ThemeOverlay.MaterialComponents.Light"
                app:iconifiedByDefault="false"
                app:queryHint="@string/search"
                app:searchIcon="@drawable/ic_search" />
        </com.google.android.material.appbar.AppBarLayout>

        <include
            android:id="@+id/i_start_message"
            layout="@layout/start_message" />

        <include
            android:id="@+id/i_connection_error"
            layout="@layout/connection_error" />

        <ProgressBar
            android:id="@+id/pb"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:scrollbarSize="@dimen/dim_30dp"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/rl_result_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_bar"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_10dp"
                android:layout_marginTop="@dimen/dim_8dp"
                android:layout_marginEnd="@dimen/dim_10dp"
                android:layout_marginBottom="@dimen/dim_8dp" />

            <TextView
                android:id="@+id/tv_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_10dp"
                android:layout_marginTop="@dimen/dim_8dp"
                android:layout_marginEnd="@dimen/dim_10dp"
                android:layout_marginBottom="@dimen/dim_8dp"
                android:layout_toStartOf="@+id/tv_pag"
                android:onClick="previous"
                android:text="@string/previous"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_pag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_2dp"
                android:layout_marginTop="@dimen/dim_8dp"
                android:layout_marginEnd="@dimen/dim_2dp"
                android:layout_marginBottom="@dimen/dim_8dp"
                android:layout_toStartOf="@+id/tv_following"
                android:text="@string/pag" />

            <TextView
                android:id="@+id/tv_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/dim_10dp"
                android:layout_marginTop="@dimen/dim_8dp"
                android:layout_marginEnd="@dimen/dim_10dp"
                android:layout_marginBottom="@dimen/dim_8dp"
                android:onClick="following"
                android:text="@string/following"
                android:textColor="@color/colorAccent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_1dp"
                android:layout_below="@+id/tv_result"
                android:background="@color/gray"
                android:elevation="@dimen/dim_2dp" />

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_result_detail"
            android:layout_margin="@dimen/dim_4dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>